Feat::240717토큰 유효성 확인
