# swagger/user.swagger.yml
@@ -174,6 +174,41 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+  
+  /auth/token:
+    post:
+      tags:
+        - User
+      produces:
+      - application/json
+      security:
+        - Authorization: []
+      responses:
+        '200':
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+        
+        '401':
+          description: 토큰 오류
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 401
+              isSuccess:  
+                type: boolean
+                example: false
+              error:
+                type: string
+                example: 유효하지 않은 토큰입니다.
 
   /random/new:
     put:
